--- a/html/changelogs/archive/2021-06.yml
+++ b/html/changelogs/archive/2021-06.yml
@@ -11,6 +11,7 @@
   - bugfix: Martini Belts can no longer give you invalid 'fixme' items
   - server: Two new config values for overriding the respawn timers of both marines
       and xenomorphs.
+2021-06-03:
   BraveMole:
   - rscadd: New way of registering keybinds, you have to push the buttons for 2 seconds
       for it to register
@@ -22,3 +23,16 @@
   - bugfix: binoculars now can laser target properly.
   TiviPlus:
   - admin: Adds logging to shipside doors
+2021-06-04:
+  BraveMole:
+  - balance: Miners now take time to disable
+  ZephyrTFA:
+  - refactor: Massive Define Refactoring
+2021-06-05:
+  Wayland-Smithy:
+  - qol: Latejoin Xeno Prefs default to OFF now. Far less unwitting ghosts should
+      be getting shoved into SSD xenos.
+2021-06-06:
+  Wayland-Smithy:
+  - bugfix: Say verb get_key() no longer runtimes.
+  - admin: Game logs now save the location of mob ghostings.
